--- a/3B-NEW/seller-statistic.html
+++ b/3B-NEW/seller-statistic.html
@@ -349,7 +349,7 @@
 									Doanh thu thuần tháng này <i class="fa fa-arrow-circle-right"></i> <span class="text-light-blue"><strong>375.900.877</strong></span>
 								</h3>
 								<div class="pull-right">
-									<select class="form-control">
+									<select class="form-control margin-b">
 										<option selected="selected">Tháng này</option>
 										<option>Hôm nay</option>
 										<option>Hôm qua</option>
@@ -358,6 +358,29 @@
 									</select>
 								</div>
 								<div class="clearfix"></div>
+
+								<ul class="adv-hist-control">
+									<li>
+										<span class="input-daterange">
+											<div class="form-group">
+												<div class="input-group small">
+													<span class="input-group-btn">
+														<span class="btn">Từ</span>
+													</span>
+													<input type="text" class="input-sm form-control" name="start">
+												</div>
+											</div>
+											<div class="form-group">
+												<div class="input-group small">
+													<span class="input-group-btn">
+														<span class="btn">đến</span>
+													</span>
+													<input type="text" class="input-sm form-control" name="end">
+												</div>
+											</div>
+										</span>
+									</li>
+								</ul>
 							</div>
 						</div>
 					</div>
@@ -393,6 +416,11 @@
 	<script type="text/javascript">
 		(function($){
 			$(function(){
+				$('.input-daterange').datepicker({
+					format: "dd/mm/yyyy",
+					todayHighlight: true,
+				});
+
 				// Chart
 				var xValues = ["01","02","03","04","05","06","07"];
 				// var yValues = [55000, 2000000, 202000, 100000, 600000, 350000, 10];
