3B - NEW_DESIGN - PRODUCT_LIST_RATING_MOBILE - add page list rating

--- a/3B-WEB/NEW_DESIGN/mobile/product-details.html
+++ b/3B-WEB/NEW_DESIGN/mobile/product-details.html
@@ -602,7 +602,7 @@
 
 			<div class="p-review">
 				<div class="title">
-					<h3>Đánh Giá sản phẩm <a href="product-join-to-buy.html">Xem tất cả <i class="fa fa-angle-right"></i></a></h3>
+					<h3>Đánh Giá sản phẩm <a href="product-list-rating.html">Xem tất cả <i class="fa fa-angle-right"></i></a></h3>
 				</div>
 
 				<!-- BEGIN LIST CAT 1 -->
