3B - NEW_DESIGN - PRODUCT_LIST_RATING_PC - update list rating page

--- a/3B-WEB/product-details.html
+++ b/3B-WEB/product-details.html
@@ -913,7 +913,10 @@
 
 					<!-- BEGIN PRODUCT RATING -->
 					<div class="product-rating">
-						<h4>Product Rating</h4>
+						<h4>
+							Product Rating
+							<a class="loadmore" href="view-product-list-rating.html">Xem tất cả <i class="fa fa-angle-right"></i></a>
+						</h4>
 
 						<div class="row">
 							<div class="col-md-3">
