--- a/3B-WEB/index.html
+++ b/3B-WEB/index.html
@@ -103,6 +103,7 @@
 						<li><a href="favorite-product.html">Favorite Products</a></li>
 						<li><a href="store-follower.html">Store Follower</a></li>
 						<li><a href="search-product-top.html">Search Product Top</a></li>
+						<li><a href="view-product-list-rating.html">Product List Rating</a></li>
 					</ul>
 				</div>
 				<div class="col-md-4">
