3B - NEW_DESIGN - PRODUCT_LIST_RATING_PC - update

--- a/3B-WEB/view-product-list-rating.html
+++ b/3B-WEB/view-product-list-rating.html
@@ -246,6 +246,276 @@
 		<div class="container">
 			<div class="row column-reverse">
 				<div class="col-md-12">
+					<!-- BEGIN PRODUCT DETAILS -->
+					<div class="product-details-wrap">
+						<div class="container">
+							<div class="row">
+								<!-- BEGIN GALLERY -->
+								<div class="col-md-6">
+									<div class="product-gal">
+										<div class="slider">
+											<div class="owl-carousel owl-theme one">
+												<div style="background-image:url(assets/images/product-details/s1.jpg)" class="item-box"></div>
+												<div style="background-image:url(assets/images/product-details/s2.jpg)" class="item-box"></div>
+												<div style="background-image:url(assets/images/product-details/s3.jpg)" class="item-box"></div>
+												<div style="background-image:url(assets/images/product-details/s4.jpg)" class="item-box"></div>
+												<div style="background-image:url(assets/images/product-details/s2.jpg)" class="item-box"></div>
+												<div style="background-image:url(assets/images/product-details/s3.jpg)" class="item-box"></div>
+												<div style="background-image:url(assets/images/product-details/s4.jpg)" class="item-box"></div>
+											</div>
+
+											<!-- <div class="left"><i class="fa fa-angle-left"></i></div>
+											<div class="right"><i class="fa fa-angle-right"></i></div> -->
+										</div>
+										<div class="slider-two">
+											<div class="owl-carousel owl-theme two">
+												<div style="background-image:url(assets/images/product-details/s1.jpg)" class="item active"></div>
+												<div style="background-image:url(assets/images/product-details/s2.jpg)" class="item"></div>
+												<div style="background-image:url(assets/images/product-details/s3.jpg)" class="item"></div>
+												<div style="background-image:url(assets/images/product-details/s4.jpg)" class="item"></div>
+												<div style="background-image:url(assets/images/product-details/s2.jpg)" class="item"></div>
+												<div style="background-image:url(assets/images/product-details/s3.jpg)" class="item"></div>
+												<div style="background-image:url(assets/images/product-details/s4.jpg)" class="item"></div>
+											</div>
+
+											<div class="left-t"><i class="fa fa-angle-left"></i></div>
+											<div class="right-t"><i class="fa fa-angle-right"></i></div>
+										</div>
+
+										<span class="tag-lbl">Hàng cũ</span>
+
+										<div class="out-of-stock boxes">
+											<span>Hết hàng</span>
+											<a href="#">Nhận thông báo khi có hàng</a>
+										</div>
+									</div>
+
+									<div class="share-link">
+										<div class="liked boxes">
+											<img src="assets/images/new-design/icons-svg/heart.svg">
+											<label>Đã thích (1,4k)</label>
+										</div>
+										<ul class="socials">
+											<li>Share</li>
+											<li class="facebook"><a class="btn-perspective" href="#"><i class="fa fa-facebook"></i></a></li>
+											<li class="instagram"><a class="btn-perspective" href="#"><i class="fa fa-instagram"></i></a></li>
+											<li class="twitter"><a class="btn-perspective" href="#"><i class="fa fa-twitter"></i></a></li>
+											<li><button class="btn btn-default">Copy Link</button></li>
+										</ul>
+									</div>					
+								</div>
+								<!-- /END GALLERY -->
+
+								<div class="col-md-6">
+									<div class="product-item">
+										<h3>Korean Style Coat - High Quality Product (many colors and sizes)</h3>
+										<div class="rating-sold">
+											<div class="rating pull-left">
+												<div class="rating-group disable-hover">
+													<label aria-label="0 stars" class="rating-label" for="rating5-0">&nbsp;</label>
+													<input class="rating-input rating-input--none" name="rating5" id="rating5-0" value="0" type="radio">
+
+													<label aria-label="0.5 stars" class="rating-label rating-label-half" for="rating5-05">
+														<i class="rating-icon rating-icon--star fa fa-star-half"></i>
+													</label>
+													<input class="rating-input" name="rating5" id="rating5-05" value="0.5" type="radio">
+
+													<label aria-label="1 star" class="rating-label" for="rating5-10">
+														<i class="rating-icon rating-icon--star fa fa-star"></i>
+													</label>
+													<input class="rating-input" name="rating5" id="rating5-10" value="1" type="radio">
+
+													<label aria-label="1.5 stars" class="rating-label rating-label-half" for="rating5-15">
+														<i class="rating-icon rating-icon--star fa fa-star-half"></i>
+													</label>
+													<input class="rating-input" name="rating5" id="rating5-15" value="1.5" type="radio">
+
+													<label aria-label="2 stars" class="rating-label" for="rating5-20">
+														<i class="rating-icon rating-icon--star fa fa-star"></i>
+													</label>
+													<input class="rating-input" name="rating5" id="rating5-20" value="2" type="radio">
+
+													<label aria-label="2.5 stars" class="rating-label rating-label-half" for="rating5-25">
+														<i class="rating-icon rating-icon--star fa fa-star-half"></i>
+													</label>
+													<input class="rating-input" name="rating5" id="rating5-25" value="2.5" type="radio">
+
+													<label aria-label="3 stars" class="rating-label" for="rating5-30">
+														<i class="rating-icon rating-icon--star fa fa-star"></i>
+													</label>
+													<input class="rating-input" name="rating5" id="rating5-30" value="3" type="radio" checked>
+
+													<label aria-label="3.5 stars" class="rating-label rating-label-half" for="rating5-35">
+														<i class="rating-icon rating-icon--star fa fa-star-half"></i>
+													</label>
+													<input class="rating-input" name="rating5" id="rating5-35" value="3.5" type="radio">
+
+													<label aria-label="4 stars" class="rating-label" for="rating5-40">
+														<i class="rating-icon rating-icon--star fa fa-star"></i>
+													</label>
+													<input class="rating-input" name="rating5" id="rating5-40" value="4" type="radio">
+
+													<label aria-label="4.5 stars" class="rating-label rating-label-half" for="rating5-45">
+														<i class="rating-icon rating-icon--star fa fa-star-half"></i>
+													</label>
+													<input class="rating-input" name="rating5" id="rating5-45" value="4.5" type="radio">
+
+													<label aria-label="5 stars" class="rating-label" for="rating5-50"><i class="rating-icon rating-icon--star fa fa-star"></i></label>
+													<input class="rating-input" name="rating5" id="rating5-50" value="5" type="radio">
+												</div>
+												<span class="score">4.0 <span>(200 ratings)</span></span>
+											</div>
+											<div class="sold pull-left">
+												<span>555 Sold</span>
+											</div>
+											<div class="clearfix"></div>
+										</div>
+										<div class="product-meta-block">
+											<div class="product-meta pull-left">
+												<label class="sale">-50%</label>
+												<span>$124,00 - $234,00</span>
+												<span class="sale">$345,00 - $456,00</span>
+											</div>
+											<div class="total-item pull-left">
+												<span>330 items</span>
+											</div>
+											<div class="clearfix"></div>
+											<div class="flash-sale-bar">
+												<h3 class="pull-left">Fla<span><img src="assets/images/svg/flash-white.svg"></span>h Sale</h3>
+												<div class="pull-right">
+													<span class="flash-time">
+														Ends in:
+														<span class="hour">12</span> : 
+														<span class="minute">46</span> : 
+														<span class="second">34</span>
+													</span>
+												</div>
+												<div class="clearfix"></div>
+											</div>
+										</div>
+									</div>
+
+									<!-- BEGIN PROMOTE -->
+									<div class="promote">
+										<h4>Promote</h4>
+
+										<div class="item">
+											<div class="item-top"><span>-10$</span>Discount</div>
+											<div class="item-bot">Buy 250$</div>
+										</div>
+										<div class="item">
+											<div class="item-top"><span>-20$</span>Discount</div>
+											<div class="item-bot">Buy 250$</div>
+										</div>
+										<div class="item">
+											<div class="item-top"><span>-30$</span>Discount</div>
+											<div class="item-bot">Buy 250$</div>
+										</div>
+										<div class="item">
+											<div class="item-top"><span>-50$</span>Discount</div>
+											<div class="item-bot">Buy 250$</div>
+										</div>
+									</div>
+									<!-- /END PROMOTE -->
+
+									<!-- BEGIN METHODS -->
+									<div class="methods">
+										<ul>
+											<li class="delivery">
+												<img src="assets/images/svg/delivery-truck-2.svg">
+												24h Delivery
+											</li>
+											<li class="calendar">
+												<img src="assets/images/svg/calendar.svg">
+												7 days return
+											</li>
+											<li class="fake-website">
+												<img src="assets/images/svg/fake-website.svg">
+												1 Fake to 10
+											</li>
+											<li class="security">
+												<img src="assets/images/svg/security.svg">
+												Warranty 12 months
+											</li>
+										</ul>
+									</div>
+									<!-- /ENDMETHODS -->
+
+									<!-- BEGIN MORE INFO - COLOR SIZE... -->
+									<div class="more-info">
+										<!-- BEGIN COLOR -->
+										<div class="color">
+											<label class="pull-left">Color</label>
+											<ul>
+												<li class="active">
+													<img src="assets/images/img26.png">
+													<span>Black</span>
+												</li>
+												<li>
+													<img src="assets/images/img26.png">
+													<span>Blue</span>
+												</li>
+												<li>
+													<img src="assets/images/img26.png">
+													<span>White</span>
+												</li>
+												<li>
+													<img src="assets/images/img26.png">
+													<span>Yellow</span>
+												</li>
+											</ul>
+											<div class="clearfix"></div>
+										</div>
+										<!-- /END COLOR -->
+
+										<!-- BEGIN SIZE -->
+										<div class="size">
+											<label class="pull-left">Size</label>
+											<ul>
+												<li class="active">S</li>
+												<li>M</li>
+												<li>L</li>
+												<li>XL</li>
+												<li class="disabled">XXL</li>
+											</ul>
+											<div class="clearfix"></div>
+										</div>
+										<!-- /END SIZE -->
+
+										<!-- BEGIN DELIVERY -->
+										<div class="delivery">
+											<label class="pull-left">Delivery</label>
+											<p>604 South York Ave. Apt 64  Piscataway, NJ 08854 <i class="fa fa-angle-down"></i> <span>Delivery 2 - 3 day - <span>Free Shipping</span></span></p>
+										</div>
+										<!-- /END DELIVERY -->
+
+										<!-- BEGIN QUALITY -->
+										<div class="quality">
+											<div class="quality-block">
+												<label>Quality</label>
+												<div class="control">
+													<button class="btn btn-default minus">-</button>
+													<span>1</span>
+													<button class="btn btn-default plus">+</button>
+												</div>
+											</div>
+											<label class="error-msg"><i class="fa fa-exclamation"></i> Văn bản lỗi hiển thị</label>
+										</div>
+										<!-- /END QUALITY -->
+
+										<div class="control">
+											<button class="retail" data-toggle="modal" data-target="#addSuccess">120.000 đ <span>Retail</span></button>
+											<button class="combo">110.000 đ <span>Buy in combo</span><span>min 5 products </span></button>
+											<button class="group">90.000 đ <span>Buy in group</span></button>
+										</div>
+									</div>
+									<!-- /END MORE INFO -->
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- /END PRODUCT DETAILS -->
+
 					<!-- BEGIN PRODUCT RATING -->
 					<div class="product-rating">
 						<h4>Product Rating</h4>
@@ -867,6 +1137,7 @@
 	<script src="assets/js/bootstrap.min.js"></script>
 	<script src="assets/plugins/select2/select2.full.min.js"></script>
 	<script src="assets/plugins/owl-carousel/owl.carousel.min.js"></script>
+	<script src="assets/plugins/owl-carousel/owl.carousel.thumb.min.js"></script>
 	<script src="assets/js/base.min.js"></script>
 </body>
 </html>
