--- a/3B-WEB/NEW_DESIGN/mobile/download.html
+++ b/3B-WEB/NEW_DESIGN/mobile/download.html
@@ -25,7 +25,7 @@
 		<!-- BEGIN HOT TODAY -->
 		<div class="download-page pad-t65">
 			<div class="title-page container">
-				<h3><a href="home.html"><img src="../../assets/images/new-design/icons/back-arrow.png"></a> Tải</h3>
+				<h3><a href="home.html"><img src="../../assets/images/new-design/icons/back-arrow.png"></a> Tải <a href="#" class="sign-out"><i class="fa fa-sign-out"></i><span>Đăng xuất</span></a></h3>
 			</div>
 
 			<div class="banner">
