--- a/3B-WEB/index.html
+++ b/3B-WEB/index.html
@@ -147,6 +147,7 @@
 						<li><a href="NEW_DESIGN/mobile/store-follower.html">Store Follower</a></li>
 						<li><a href="NEW_DESIGN/mobile/search-product-top.html">Search Product Top</a></li>
 						<li><a href="NEW_DESIGN/mobile/download.html">Download</a></li>
+						<li><a href="NEW_DESIGN/mobile/all-brand.html">All Brand & Search Brand</a></li>
 					</ul>
 				</div>
 				<div class="clearfix"></div>
