3B - NEW_DESIGN - small update on MOBILE

--- a/3B-WEB/NEW_DESIGN/mobile/product-details.html
+++ b/3B-WEB/NEW_DESIGN/mobile/product-details.html
@@ -232,7 +232,8 @@
 							<li class="fb"><a href="#"><i class="fa fa-facebook"></i></a></li>
 							<li><a href="#"><img src="../../assets/images/new-design/icons-svg/zalo.svg"></a></li>
 							<li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
-							<li class="copy"><a href="#" class="btn btn-border-g">Copy link</a></li>
+							<li class="copy-img"><a href="#"><img src="../../assets/images/new-design/icons-svg/copy-link.svg"></a></li>
+							<li><a href="#"><img src="../../assets/images/svg/chat.svg"></a></li>
 						</ul>
 					</div>
 				</div>
@@ -296,7 +297,7 @@
 							<label>Time left <span>22:45:04</span></label>
 						</div>
 					</div>
-					<a href="#" class="btn btn-purple" data-toggle="modal" data-target="#jointobuyModal">Tham gia</a>
+					<a href="#" class="btn btn-red" data-toggle="modal" data-target="#jointobuyModal">Tham gia</a>
 				</div>
 
 				<div class="boxes">
@@ -308,7 +309,7 @@
 							<label>Time left <span>22:45:04</span></label>
 						</div>
 					</div>
-					<a href="#" class="btn btn-purple" data-toggle="modal" data-target="#jointobuyModal">Tham gia</a>
+					<a href="#" class="btn btn-red" data-toggle="modal" data-target="#jointobuyModal">Tham gia</a>
 				</div>
 			</div><!-- /end product join to buy -->
 
