--- a/3B-WEB/NEW_DESIGN/mobile/product-join-to-buy.html
+++ b/3B-WEB/NEW_DESIGN/mobile/product-join-to-buy.html
@@ -145,7 +145,7 @@
 						<label>Time left <span>22:45:04</span></label>
 					</div>
 				</div>
-				<a href="#" class="btn btn-purple">Tham gia</a>
+				<a href="#" class="btn btn-red">Tham gia</a>
 			</div>
 
 			<div class="boxes">
@@ -157,7 +157,7 @@
 						<label>Time left <span>22:45:04</span></label>
 					</div>
 				</div>
-				<a href="#" class="btn btn-purple">Tham gia</a>
+				<a href="#" class="btn btn-red">Tham gia</a>
 			</div>
 
 			<div class="boxes">
@@ -169,7 +169,7 @@
 						<label>Time left <span>22:45:04</span></label>
 					</div>
 				</div>
-				<a href="#" class="btn btn-purple">Tham gia</a>
+				<a href="#" class="btn btn-red">Tham gia</a>
 			</div>
 
 			<div class="boxes">
@@ -181,7 +181,7 @@
 						<label>Time left <span>22:45:04</span></label>
 					</div>
 				</div>
-				<a href="#" class="btn btn-purple">Tham gia</a>
+				<a href="#" class="btn btn-red">Tham gia</a>
 			</div>
 
 			<div class="boxes">
@@ -193,7 +193,7 @@
 						<label>Time left <span>22:45:04</span></label>
 					</div>
 				</div>
-				<a href="#" class="btn btn-purple">Tham gia</a>
+				<a href="#" class="btn btn-red">Tham gia</a>
 			</div>
 		</div>
 		<!-- /END JOIN TO BUY -->
