--- a/3B-WEB/NEW_DESIGN/mobile/store-best-selling.html
+++ b/3B-WEB/NEW_DESIGN/mobile/store-best-selling.html
@@ -165,7 +165,7 @@
 					</div>
 					<div class="actions boxes">
 						<a href="#" class="btn btn-border-b">Theo dõi</a>
-						<a href="#" class="btn btn-border-b">Xem shop</a>
+						<a href="#" class="btn btn-border-b">Chat ngay</a>
 					</div>
 				</div><!-- /end head -->
 
