3B - NEW_DESIGN - small update download page

--- a/3B-WEB/NEW_DESIGN/mobile/download.html
+++ b/3B-WEB/NEW_DESIGN/mobile/download.html
@@ -39,8 +39,8 @@
 				</div>
 				<div class="scroll-x menu">
 					<ul class="boxes">
-						<li><a href="#">Đơn hàng chưa thanh toán</a></li>
-						<li><a href="#">Tất cả đơn hàng</a></li>
+						<li><a href="store-follower.html">Danh sách cửa hàng theo dõi</a></li>
+						<li><a href="roduct-favorite.html">Sản phẩm yêu thích</a></li>
 					</ul>
 				</div>
 			</div>
