3B - update link buyer-profile

--- a/3B-NEW/buyer-profile.html
+++ b/3B-NEW/buyer-profile.html
@@ -251,6 +251,11 @@
 									
 									<h3 class="profile-username">Frank Jr.</h3>
 									<p class="text-muted">Dung lượng tối đa 1MB / Định dạng .JPEG .PNG</p>
+
+									<ul class="links">
+										<li><a href="../3B-WEB/store-follower.html">Danh sách cửa hàng theo dõi</a></li>
+										<li><a href="../3B-WEB/favorite-product.html">Sản phẩm yêu thích</a></li>
+									</ul>
 								</div>
 								<!-- /END AVATAR BUYER -->
 							</div>
