3B - NEW_DESIGN - update icons featured

--- a/3B-WEB/NEW_DESIGN/mobile/home.html
+++ b/3B-WEB/NEW_DESIGN/mobile/home.html
@@ -282,7 +282,7 @@
 
 				<div class="banner-ads"><img src="../../assets/images/new-design/ads-1.jpg"></div>
 
-				<div class="featured">
+				<div class="featured scroll-x">
 					<ul>
 						<li>
 							<a href="#">
@@ -310,6 +310,14 @@
 						</li>
 						<li>
 							<a href="#">
+								<img src="../../assets/images/new-design/icons/secondhand.png">
+								<span>Hàng cũ</span>
+							</a>
+						</li>
+					</ul>
+					<ul>
+						<li>
+							<a href="#">
 								<img src="../../assets/images/new-design/icons/from-1k.png">
 								<span>From 1k</span>
 							</a>
@@ -330,6 +338,12 @@
 							<a href="#">
 								<img src="../../assets/images/new-design/icons/phu-kien-oto.png">
 								<span>Phụ kiện ô tô</span>
+							</a>
+						</li>
+						<li>
+							<a href="#">
+								<img src="../../assets/images/new-design/icons/tools.png">
+								<span>Tiện ích</span>
 							</a>
 						</li>
 					</ul>
