--- a/3B-WEB/NEW_DESIGN/pc/home.html
+++ b/3B-WEB/NEW_DESIGN/pc/home.html
@@ -440,6 +440,18 @@
 											<span>Phụ kiện ô tô</span>
 										</a>
 									</li>
+									<li>
+										<a href="#">
+											<img src="../../assets/images/new-design/icons/secondhand.png">
+											<span>Hàng cũ</span>
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											<img src="../../assets/images/new-design/icons/tools.png">
+											<span>Tiện ích</span>
+										</a>
+									</li>
 								</ul>
 							</div>
 						</div>
