3B - NEW_DESIGN - HOME_MOBILE - update scroll on featured

--- a/3B-WEB/NEW_DESIGN/mobile/home.html
+++ b/3B-WEB/NEW_DESIGN/mobile/home.html
@@ -282,72 +282,80 @@
 
 				<div class="banner-ads"><img src="../../assets/images/new-design/ads-1.jpg"></div>
 
-				<div class="featured scroll-x">
-					<ul>
-						<li>
-							<a href="#">
-								<img src="../../assets/images/new-design/icons/gio-vang.png">
-								<span>Giờ vàng</span>
-							</a>
-						</li>
-						<li>
-							<a href="#">
-								<img src="../../assets/images/new-design/icons/sale-le-size.png">
-								<span>Sale lẻ size</span>
-							</a>
-						</li>
-						<li>
-							<a href="#">
-								<img src="../../assets/images/new-design/icons/thuong-hieu.png">
-								<span>Thương hiệu</span>
-							</a>
-						</li>
-						<li>
-							<a href="#">
-								<img src="../../assets/images/new-design/icons/cua-hang-tot.png">
-								<span>Cửa hàng tốt</span>
-							</a>
-						</li>
-						<li>
-							<a href="#">
-								<img src="../../assets/images/new-design/icons/secondhand.png">
-								<span>Hàng cũ</span>
-							</a>
-						</li>
-					</ul>
-					<ul>
-						<li>
-							<a href="#">
-								<img src="../../assets/images/new-design/icons/from-1k.png">
-								<span>From 1k</span>
-							</a>
-						</li>
-						<li>
-							<a href="#">
-								<img src="../../assets/images/new-design/icons/trai-cay.png">
-								<span>Trái cây</span>
-							</a>
-						</li>
-						<li>
-							<a href="#">
-								<img src="../../assets/images/new-design/icons/thuc-pham.png">
-								<span>Thực phẩm</span>
-							</a>
-						</li>
-						<li>
-							<a href="#">
-								<img src="../../assets/images/new-design/icons/phu-kien-oto.png">
-								<span>Phụ kiện ô tô</span>
-							</a>
-						</li>
-						<li>
-							<a href="#">
-								<img src="../../assets/images/new-design/icons/tools.png">
-								<span>Tiện ích</span>
-							</a>
-						</li>
-					</ul>
+				<div class="featured-bl">
+					<div class="featured scroll-x">
+						<ul>
+							<li>
+								<a href="#">
+									<img src="../../assets/images/new-design/icons/gio-vang.png">
+									<span>Giờ vàng</span>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<img src="../../assets/images/new-design/icons/sale-le-size.png">
+									<span>Sale lẻ size</span>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<img src="../../assets/images/new-design/icons/thuong-hieu.png">
+									<span>Thương hiệu</span>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<img src="../../assets/images/new-design/icons/cua-hang-tot.png">
+									<span>Cửa hàng tốt</span>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<img src="../../assets/images/new-design/icons/secondhand.png">
+									<span>Hàng cũ</span>
+								</a>
+							</li>
+						</ul>
+						<ul>
+							<li>
+								<a href="#">
+									<img src="../../assets/images/new-design/icons/from-1k.png">
+									<span>From 1k</span>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<img src="../../assets/images/new-design/icons/trai-cay.png">
+									<span>Trái cây</span>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<img src="../../assets/images/new-design/icons/thuc-pham.png">
+									<span>Thực phẩm</span>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<img src="../../assets/images/new-design/icons/phu-kien-oto.png">
+									<span>Phụ kiện ô tô</span>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<img src="../../assets/images/new-design/icons/tools.png">
+									<span>Tiện ích</span>
+								</a>
+							</li>
+						</ul>
+					</div>
+
+					<div class="indicators">
+						<span class="indi-item active"></span>
+						<span class="indi-item"></span>
+					</div>
 				</div>
+				
 			</div>
 
 			<div class="header-bot"><button class="btn btn-view">YÊU BẾP NGHIỆN NHÀ</button></div>
