3B - NEW_DESIGN - update product-details and search-product-top

--- a/3B-WEB/NEW_DESIGN/mobile/product-details.html
+++ b/3B-WEB/NEW_DESIGN/mobile/product-details.html
@@ -275,6 +275,37 @@
 						Warranty 12 months
 					</li>
 				</ul>
+
+				<div class="delivery-by boxes">
+					<label><img src="../../assets/images/svg/delivery-truck-5.svg"> Vận chuyển bởi:</label>
+
+					<div class="shipping-method custom-slb-2">
+						<div class="icon"><img src="../../assets/images/svg/small-triangle-down.svg"></div>
+
+						<div id="selected">
+							<span class="wrap-line">Tên đơn vị vận chuyển rất là dài</span>
+							<span class="time">Day Receive 7 Sep -  9 Sep</span>
+						</div>
+
+						<div class="options">
+							<div class="option">
+								<span class="wrap-line">Tên đơn vị vận chuyển rất là dài</span>
+								<span class="time">Day Receive 7 Sep -  9 Sep</span>
+							</div>
+							<div class="option same-active">
+								<span class="wrap-line">Giao hàng nhanh 2</span>
+								<span class="time">Day Receive 7 Sep -  9 Sep</span>
+							</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="delivery-by boxes">
+					<label><img src="../../assets/images/svg/delivery-truck-5.svg"> Vận chuyển bởi:</label>
+					<div class="shipping-method">
+						<a href="#" class="txt-red ">Chính sách vận chuyển shop</a>
+					</div>
+				</div>
 			</div><!-- /end product method -->
 
 			<div class="p-properties">
