--- a/3B-WEB/search-product-top.html
+++ b/3B-WEB/search-product-top.html
@@ -409,56 +409,60 @@
 					<div class="store-top-product">
 						<h4>Tìm kiếm hàng đầu</h4>
 
-						<ul class="search-top-cat">
-							<li>
-								<a class="active" href="#">
-									<img src="assets/images/img30.jpg">
-									<h4 class="wrap-line w-break">Lorem isum dolor set amit</h4>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<img src="assets/images/img29.jpg">
-									<h4 class="wrap-line w-break">Túi sách</h4>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<img src="assets/images/img25.png">
-									<h4 class="wrap-line w-break">Lorem isum dolor set amit</h4>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<img src="assets/images/img30.jpg">
-									<h4 class="wrap-line w-break">Giầy dép</h4>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<img src="assets/images/img29.jpg">
-									<h4 class="wrap-line w-break">Lorem isum dolor set amit</h4>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<img src="assets/images/img24.png">
-									<h4 class="wrap-line w-break">Lorem isum dolor set amit</h4>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<img src="assets/images/img25.png">
-									<h4 class="wrap-line w-break">Lorem isum dolor set amit</h4>
-								</a>
-							</li>
-							<li>
-								<a href="#">
-									<img src="assets/images/img24.png">
-									<h4 class="wrap-line w-break">Lorem isum dolor set amit</h4>
-								</a>
-							</li>
-						</ul>
+						<div class="search-top-cat">
+							<a href="#" class="prev"><i class="fa fa-angle-left"></i></a>
+							<ul>
+								<li>
+									<a class="active" href="#">
+										<img src="assets/images/img30.jpg">
+										<h4 class="wrap-line w-break">Lorem isum dolor set amit</h4>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<img src="assets/images/img29.jpg">
+										<h4 class="wrap-line w-break">Túi sách</h4>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<img src="assets/images/img25.png">
+										<h4 class="wrap-line w-break">Lorem isum dolor set amit</h4>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<img src="assets/images/img30.jpg">
+										<h4 class="wrap-line w-break">Giầy dép</h4>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<img src="assets/images/img29.jpg">
+										<h4 class="wrap-line w-break">Lorem isum dolor set amit</h4>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<img src="assets/images/img24.png">
+										<h4 class="wrap-line w-break">Lorem isum dolor set amit</h4>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<img src="assets/images/img25.png">
+										<h4 class="wrap-line w-break">Lorem isum dolor set amit</h4>
+									</a>
+								</li>
+								<li>
+									<a href="#">
+										<img src="assets/images/img24.png">
+										<h4 class="wrap-line w-break">Lorem isum dolor set amit</h4>
+									</a>
+								</li>
+							</ul>
+							<a href="#" class="next"><i class="fa fa-angle-right"></i></a>
+						</div>
 
 						<!-- BEGIN LIST PRODUCT -->
 						<div class="row custom-col-5">
