3B - update socials button - buyer-profile

--- a/3B-NEW/buyer-profile.html
+++ b/3B-NEW/buyer-profile.html
@@ -231,6 +231,37 @@
 										</div>
 										
 									</div>
+
+									<div class="socials-connect">
+
+										<div class="form-group display-flex inline">
+											<label><img src="assets/images/svg/btn-fb.svg"> Connect Facebook</label>
+											<button type="button" class="btn btn-sm btn-toggle" data-toggle="button" aria-pressed="false" autocomplete="off">
+												<div class="handle"></div>
+											</button>
+										</div>
+
+										<div class="form-group display-flex inline">
+											<label><img src="assets/images/svg/btn-gplus.svg"> Connect Google</label>
+											<button type="button" class="btn btn-sm btn-toggle" data-toggle="button" aria-pressed="false" autocomplete="off">
+												<div class="handle"></div>
+											</button>
+										</div>
+
+										<div class="form-group display-flex inline">
+											<label><img src="assets/images/svg/btn-zalo.svg"> Connect Zalo</label>
+											<button type="button" class="btn btn-sm btn-toggle" data-toggle="button" aria-pressed="false" autocomplete="off">
+												<div class="handle"></div>
+											</button>
+										</div>
+
+										<div class="form-group display-flex inline">
+											<label><img src="assets/images/svg/btn-apple.svg" class="btn-apple"> Connect Apple</label>
+											<button type="button" class="btn btn-sm btn-toggle" data-toggle="button" aria-pressed="false" autocomplete="off">
+												<div class="handle"></div>
+											</button>
+										</div>
+									</div>
 								</div>
 								<!-- /END FORM PROFILE -->
 								
