3B - update fixed width for seller web

--- a/3B-NEW/seller-product-list.html
+++ b/3B-NEW/seller-product-list.html
@@ -265,13 +265,15 @@
 						<div class="box-body">
 							<div class="row">
 								<div class="col-md-8">
-									<div class="btn-group margin-b">
-										<a href="#" class="btn btn-default active">Tất cả</a>
-										<a href="#" class="btn btn-default">Còn hàng</a>
-										<a href="#" class="btn btn-default">Hết hàng</a>
-										<a href="#" class="btn btn-default">Đã khóa</a>
-										<a href="#" class="btn btn-default">Vi phạm</a>
-										<a href="#" class="btn btn-default">Đã ẩn</a>
+									<div class="scroll-x">
+										<div class="btn-group margin-b filter">
+											<a href="#" class="btn btn-default active">Tất cả</a>
+											<a href="#" class="btn btn-default">Còn hàng</a>
+											<a href="#" class="btn btn-default">Hết hàng</a>
+											<a href="#" class="btn btn-default">Đã khóa</a>
+											<a href="#" class="btn btn-default">Vi phạm</a>
+											<a href="#" class="btn btn-default">Đã ẩn</a>
+										</div>
 									</div>
 								</div>
 
@@ -289,7 +291,7 @@
 									</div>
 								</div>
 								<div class="col-md-6">
-									<div class="btn-group pull-right">
+									<div class="btn-group pull-right margin-b filter">
 										<button type="button" class="btn btn-default">Gần đây</button>
 										<button type="button" class="btn btn-default">Bán chạy</button>
 										<button type="button" class="btn btn-default">Giá</button>
