--- a/3B-NEW/seller-order-waiting-confirm.html
+++ b/3B-NEW/seller-order-waiting-confirm.html
@@ -25,7 +25,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500&display=swap&subset=vietnamese" rel="stylesheet">
 
 </head>
-<body class="hold-transition sidebar-mini">
+<body class="hold-transition sidebar-mini seller-fixed-width">
 
 	<!-- BEGIN WRAPPER -->
 	<div class="wrapper">
