3B - NEW_DESIGN - MOBILE - update ongoing flash-sale

--- a/3B-WEB/NEW_DESIGN/mobile/flash-sale-ongoing.html
+++ b/3B-WEB/NEW_DESIGN/mobile/flash-sale-ongoing.html
@@ -224,21 +224,25 @@
 							</div>
 						</div> -->
 
-						<div class="details boxes">
+						<div class="details boxes bl-1">
 							<div class="p-price with-sale wrap">
 								<span class="p-old wrap-line w-break">100,989,000đ - 290,195,000đ</span>
 								<span class="p-sale wrap-line w-break">100,989,000đ - 290,195,000đ</span>
 							</div>
-							<a href="#" class="btn btn-purple">Mua ngay</a>
+							<div class="sold">Đã bán 12/30</div>
 						</div>
 
-						<div class="p-sold">
-							<img class="progress-icon" src="../../assets/images/new-design/icons/fire.png">
-							<div class="progress">
-								<div class="progress-bar" style="width: 80%;">
-									<span class="sr-only">Đã bán: 20/30</span>
+						<div class="boxes bl-2">
+							<div class="p-sold">
+								<img class="progress-icon" src="../../assets/images/new-design/icons/fire.png">
+								<div class="progress">
+									<div class="progress-bar" style="width: 80%;">
+										<!-- <span class="sr-only">Đã bán: 20/30</span> -->
+									</div>
 								</div>
 							</div>
+
+							<a href="#" class="btn btn-purple">Mua ngay</a>
 						</div>
 					</div>
 				</div><!-- /end item -->
@@ -252,21 +256,25 @@
 					<div class="info">
 						<h4 class="wrap-line twoline">Thùng Mega Tã Quần Giữ Dáng Pampers tiết kiệm</h4>
 
-						<div class="details boxes">
+						<div class="details boxes bl-1">
 							<div class="p-price with-sale wrap">
-								<span class="p-old wrap-line w-break">100,989,000đ</span>
-								<span class="p-sale wrap-line w-break">300,989,000đ</span>
+								<span class="p-old wrap-line w-break">100,989,000đ - 290,195,000đ</span>
+								<span class="p-sale wrap-line w-break">100,989,000đ - 290,195,000đ</span>
 							</div>
-							<a href="#" class="btn btn-purple">Mua ngay</a>
+							<div class="sold">Đã bán 1220/3000</div>
 						</div>
 
-						<div class="p-sold">
-							<img class="progress-icon" src="../../assets/images/new-design/icons/fire.png">
-							<div class="progress">
-								<div class="progress-bar" style="width: 100%;">
-									<span class="sr-only">Đã bán: 30/30</span>
+						<div class="boxes bl-2">
+							<div class="p-sold">
+								<img class="progress-icon" src="../../assets/images/new-design/icons/fire.png">
+								<div class="progress">
+									<div class="progress-bar" style="width: 80%;">
+										<!-- <span class="sr-only">Đã bán: 20/30</span> -->
+									</div>
 								</div>
 							</div>
+
+							<a href="#" class="btn btn-purple">Mua ngay</a>
 						</div>
 					</div>
 				</div><!-- /end item -->
@@ -280,21 +288,25 @@
 					<div class="info">
 						<h4 class="wrap-line twoline">Thùng Mega Tã Quần Giữ Dáng Pampers tiết kiệm</h4>
 
-						<div class="details boxes">
+						<div class="details boxes bl-1">
 							<div class="p-price with-sale wrap">
 								<span class="p-old wrap-line w-break">1,989,000đ - 2,195,000đ</span>
 								<span class="p-sale wrap-line w-break">989,000đ - 3,195,000đ</span>
 							</div>
-							<a href="#" class="btn btn-purple">Mua ngay</a>
+							<div class="sold">Đã bán 12202/30400</div>
 						</div>
 
-						<div class="p-sold">
-							<img class="progress-icon" src="../../assets/images/new-design/icons/fire.png">
-							<div class="progress">
-								<div class="progress-bar" style="width: 10%;">
-									<span class="sr-only">Đã bán: 5/30</span>
+						<div class="boxes bl-2">
+							<div class="p-sold">
+								<img class="progress-icon" src="../../assets/images/new-design/icons/fire.png">
+								<div class="progress">
+									<div class="progress-bar" style="width: 50%;">
+										<!-- <span class="sr-only">Đã bán: 20/30</span> -->
+									</div>
 								</div>
 							</div>
+
+							<a href="#" class="btn btn-purple">Mua ngay</a>
 						</div>
 					</div>
 				</div><!-- /end item -->
