update buyer cancel account

--- a/3B-NEW/index.html
+++ b/3B-NEW/index.html
@@ -436,6 +436,18 @@
 				</div>				
 			</div>
 		</div>
+		
+		<hr style="border:2px solid #aaa">
+
+		<div id="pharse10" class="row">
+			<div class="col-md-6">
+				<div class="admin">
+					<ul>
+						<li><a href="buyer-cancel-account.html">Delete Account</a></li>
+					</ul>
+				</div>				
+			</div>
+		</div>
 	</div>
 
 	<!-- /END WRAPPER -->
@@ -448,7 +460,8 @@
 		<li><a href="#pharse6">Pharse 6</a></li>
 		<li><a href="#pharse7">Pharse 7</a></li>
 		<li><a href="#pharse8">Pharse 8</a></li>
-		<li><a href="#pharse8">Pharse 9</a></li>
+		<li><a href="#pharse9">Pharse 9</a></li>
+		<li><a href="#pharse10">Pharse 10</a></li>
 	</ul>
 
 </body>
